fixed extra white space at bottom of homepage

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   min-height: 100%;
 }
 
